--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "git-commit-msg-linter": "^5.0.4"
+    "git-commit-msg-linter": "^5.0.4",
+    "sass": "^1.63.6"
   }
 }
